SA - 3.1.0.129 8/6/2015
Disabled 'SaveAs' wave resampling function if user didn't change sampling rate, or if the file is already in the standard 16-bit PCM format.

SA - 3.1.0.128 8/4/2015
Removed message that occurs when application is converting a incoming wave file to 16-bit format.  Text is now displayed on the status bar during the conversion.
Modified the 'SaveAs' dialog so that the user now has the choice to downsample the file to 22khz or 44khz, dependent on the current wave file sample rate.

SA - 3.1.0.127 7/26/2015
Install bug fixes.
Changed application install name from 'Speech Analyzer MSEA Beta' to 'Speech Analyzer MSEA'.
Branched audio-sync project.
Removed audio-sync code dependencies and resources.
Implemented color options for reference, gloss nat, and taskbar pages.
Added 'Pastel' color set and made it the default for SA.

SA - 3.1.0.126 7/1/2015
-First build after AS release.

SA - 3.1.0.125 4/8/2015
-Fixed bug where gloss and glossnat segments weren't identified during SAB import function.
-Added code to save .SFT timing data along with other .WAV and .SAXML data.
-Removed 'Open Startup' menu choice for AS.

SA - 3.1.0.124 4/7/2015
-Removed Autosave from menu for AudioSync
-Added support so that move left/move right/mege and split can be done after selecting any segment and then performing a right mouse click to access the popup menu.  This is for AudioSync only.
-Modified basic toolbar for AudioSync.
-Transcription boundaries are enabled by default for AudioSync.
-Segment boundaries are disabled by default for AudioSync.
-Modified AudioSync import process so that it now can automatically segment the project if it is not already.  If empty segments exist, of if segment data exist, AudioSync will ask the user what they want to do.
-Renamed install application to to 'AudioSync'.