@@ -1333,6 +1333,7 @@
 #define IDS_ERROR_READSPKRCHUNK         4029
 #define IDS_ERROR_WRITELANGCHUNK        4030
 #define IDS_ERROR_READLANGCHUNK         4031
+#define IDS_ERROR_DOWNSAMPLE			4032
 #define IDS_ERROR_WRITEREFCHUNK         4034
 #define IDS_ERROR_READREFCHUNK          4035
 #define IDS_STATTXT_PROCESSFRA          4036
@@ -1344,6 +1345,7 @@
 #define IDS_STATTXT_PROCESSWBGENERATOR  4042
 #define IDS_STATTXT_PROCESSRAW          4043
 #define IDS_CONVERT_WAVE                4044
+#define IDS_RESAMPLE_WAVE                4045
 #define IDS_TASK_PAGE_BUTTON            4050
 #define IDS_STATTXT_ESCTOCANCEL         4100
 #define IDS_STATTXT_PROCESSDUR          4101
